--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ classifiers = [
     "Typing :: Typed",
 ]
 dependencies = [
+    "networkx"
 ]
 description = "A Python package for causal modelling and inference with stochastic causal programming"
 dynamic = [
