--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,11 +83,11 @@ lint.ignore = [
     "D417", # argument description in docstring (unreliable)
     "ISC001", # simplify implicit str concatenation (ruff-format recommended)
 ]
-lint.per-file-ignores = {"tests*" = [
+lint.per-file-ignores = {"__init__.py" = [
+    "F401", # Unused import
+], "tests*" = [
     "INP001", # File is part of an implicit namespace package.
     "S101", # Use of `assert` detected
-], "__init__.py" = [
-    "F401", # Unused import
 ]}
 lint.select = [
     "ALL",
