--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ classifiers = [
     "Typing :: Typed",
 ]
 dependencies = [
-    "networkx"
+    "networkx",
 ]
 description = "A Python package for causal modelling and inference with stochastic causal programming"
 dynamic = [
