--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,7 @@ classifiers = [
     "Programming Language :: Python :: 3.13",
     "Typing :: Typed",
 ]
-dependencies = [
-    "networkx",
-]
+dependencies = ["jax", "networkx"]
 description = "A Python package for causal modelling and inference with stochastic causal programming"
 dynamic = ["version"]
 keywords = []
