Make two node example graph (#16)
* start working on node that store distributions

* refactor graph, add add_node and add_edge methods

* get multiple samples at onde

* parametrise test

* make two distribution example

* | None

* remove irrelevant nodes from test

* add stdev to test

* Update src/causalprog/graph/graph.py

Co-authored-by: Will Graham <32364977+willGraham01@users.noreply.github.com>

* Update src/causalprog/graph/graph.py

Co-authored-by: Will Graham <32364977+willGraham01@users.noreply.github.com>

* make roots_down_to_outcome a method of the graph

* Update src/causalprog/graph/graph.py

Co-authored-by: Will Graham <32364977+willGraham01@users.noreply.github.com>

* default false

* don't allow temporary None labels

* simpler test

* improve tests, and simplify iteration code

* reduce number of tests

* number of samples must be int, don't use 0 for mean so that relative error is nicer

* Update src/causalprog/graph/graph.py

Co-authored-by: Will Graham <32364977+willGraham01@users.noreply.github.com>

* Update src/causalprog/graph/graph.py

Co-authored-by: Will Graham <32364977+willGraham01@users.noreply.github.com>

* Update tests/test_graph.py

Co-authored-by: Will Graham <32364977+willGraham01@users.noreply.github.com>

* Update src/causalprog/_abc/labelled.py

Co-authored-by: Will Graham <32364977+willGraham01@users.noreply.github.com>

* indentation

---------

Co-authored-by: Will Graham <32364977+willGraham01@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,11 @@ classifiers = [
     "Programming Language :: Python :: 3.13",
     "Typing :: Typed",
 ]
-dependencies = ["jax", "networkx"]
+dependencies = [
+    "jax",
+    "networkx",
+    "numpy",
+]
 description = "A Python package for causal modelling and inference with stochastic causal programming"
 dynamic = ["version"]
 keywords = []
@@ -35,6 +39,7 @@ optional-dependencies = {dev = [
     "mkdocstrings-python",
 ], test = [
     "distrax",
+    "numpy",
     "numpyro",
     "pytest",
     "pytest-cov",
