--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,7 @@ lint.per-file-ignores = {"__init__.py" = [
     "D",
     "INP001", # File is part of an implicit namespace package.
     "S101", # Use of `assert` detected
+    "PLR0913", # Too many arguments in function definition
 ]}
 lint.select = ["ALL"]
 lint.isort.known-first-party = ["causalprog"]
