Add new page to nav so docs build

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,6 +35,7 @@ theme:
 
 nav:
   - Overview: index.md
+  - Mathematical Context: mathematical-context.md
   - API reference: api.md
   - License: LICENSE.md
 
