--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,7 +35,9 @@ theme:
 
 nav:
   - Overview: index.md
-  - Mathematical Context: mathematical-context.md
+  - Theory:
+      - Mathematical context: theory/mathematical-context.md
+      - Simple working example: theory/simple-working-example.md
   - API reference: api.md
   - License: LICENSE.md
 
