`Graph` can build numpyro model for drawing samples (#59)
* Write create_distribution for Nodes

* Non-negative tests for create_distribution

* create_distribution -> create model site

* mypy are you satisfied, is your bloodlust saited?

* Numpyro is now essential

* Add note about numpyro dists being used in DN docstring

* Write build_model method for graph + supporting property

* Write model_constructor method for Graphs

* Remove mutable defaults

* Appease the mypy gods

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,13 @@ classifiers = [
     "Programming Language :: Python :: 3.13",
     "Typing :: Typed",
 ]
-dependencies = ["jax<0.7.0", "networkx", "numpy", "typing_extensions"]
+dependencies = [
+    "jax<0.7.0",
+    "networkx",
+    "numpy",
+    "numpyro",
+    "typing_extensions",
+]
 description = "A Python package for causal modelling and inference with stochastic causal programming"
 dynamic = ["version"]
 keywords = []
@@ -36,7 +42,6 @@ optional-dependencies = {dev = [
 ], test = [
     "distrax",
     "numpy",
-    "numpyro",
     "pytest",
     "pytest-cov",
 ]}
