Add optax to test requirements

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ optional-dependencies = {dev = [
     "mkdocstrings-python",
 ], test = [
     "numpy",
+    "optax",
     "pytest",
     "pytest-cov",
 ]}
