Remove value from parameter nodes (#78)
* remove value from parameter nodes

* update for mypy

* tomlsort

* Apply suggestions from code review

Co-authored-by: Will Graham <32364977+willGraham01@users.noreply.github.com>

* make n_samples_for_estimands back into a fixture

* use raises_context

---------

Co-authored-by: Will Graham <32364977+willGraham01@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,7 @@ lint.ignore = [
     "D417", # argument description in docstring (unreliable)
     "FIX002", # Lines marked with "todo" are OK for now:
     "ISC001", # simplify implicit str concatenation (ruff-format recommended)
+    "PLR0913", # More than 5 function inputs
     "TD002", # Lines marked with "todo" are OK for now
     "TD003", # Lines marked with "todo" are OK for now
 ]
