--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,9 @@
 site_name: "causalprog"
 site_description: "Documentation website for causalprog"
 site_author: "Collaborations team, UCL Centre for Advanced Research Computing"
-copyright: "Copyright © 2025 University College London"
+copyright: >
+  Copyright © 2025 University College London -
+  <a href="#__consent">Change cookie settings</a>
 repo_url: "https://github.com/UCL/causalprog/"
 repo_name: "UCL/causalprog"
 edit_uri: edit/main/docs/
@@ -65,6 +67,17 @@ plugins:
       closing_tag: "!}"
 
 extra:
+  consent:
+    title: Cookie consent
+    description: >-
+      We use cookies to recognize your repeated visits and preferences, as well
+      as to measure the effectiveness of our documentation and whether users
+      find what they're searching for. With your consent, you're helping us to
+      make our documentation better.
+    actions:
+      - reject
+      - manage
+      - accept
   social:
     - icon: fontawesome/brands/github
       link: "https://github.com/UCL"
