Add test that all notebooks run without error

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ optional-dependencies = {dev = [
     "mkdocstrings",
     "mkdocstrings-python",
 ], test = [
+    "nbmake",
     "numpy",
     "optax",
     "pytest",
