--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -57,7 +57,7 @@ repos:
     hooks:
       - id: nbstripout
         args:
-          - --verify
+          # - --verify
           - >-
             --extra-keys=metadata.celltoolbar
             metadata.kernelspec
