--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ optional-dependencies = {dev = [
     "twine",
 ], docs = [
     "mkdocs",
+    "mkdocs-gallery",
     "mkdocs-include-markdown-plugin",
     "mkdocs-material",
     "mkdocstrings",
