--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,8 +79,12 @@ lint.per-file-ignores = {"__init__.py" = [
     "F401", # Unused import
 ], "examples*" = [
     "D103", # Allow missing docstrings in examples
+    "D205", # Blank line between docstring summary and description
+    "D400", # First line of docstring must end with period
+    "D415", # First line of docstring must end with punctuation
     "FBT001", # Allow boolean traps in examples
     "FBT002", # Allow boolean traps in examples
+    "INP001", # Do not require __init__.py for examples
     "T201", # Allow print statements in examples
 ], "tests*" = [
     "ANN",
