--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ classifiers = [
     "Programming Language :: Python :: 3.13",
     "Typing :: Typed",
 ]
-dependencies = ["jax", "networkx", "numpy", "numpyro", "typing_extensions"]
+dependencies = ["jax", "networkx", "numpy", "numpyro", "optax", "typing_extensions"]
 description = "A Python package for causal modelling and inference with stochastic causal programming"
 dynamic = ["version"]
 keywords = []
@@ -35,7 +35,6 @@ optional-dependencies = {dev = [
     "mkdocstrings-python",
 ], test = [
     "numpy",
-    "optax",
     "pytest",
     "pytest-cov",
 ]}
