--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,3 +52,22 @@ repos:
         files: ^\.github/ISSUE_TEMPLATE/.*\.yml$
         exclude: ^\.github/ISSUE_TEMPLATE/config\.yml$
         args: ["--verbose", "--schemafile", "schemas/github-issue-forms.json"]
+  - repo: https://github.com/kynan/nbstripout
+    rev: 0.8.1
+    hooks:
+      - id: nbstripout
+        args:
+          - >-
+            --extra-keys=metadata.celltoolbar
+            metadata.kernelspec
+            metadata.language_info.codemirror_mode.version
+            metadata.language_info.pygments_lexer
+            metadata.language_info.version
+            metadata.toc
+            metadata.notify_time
+            metadata.varInspector
+            cell.metadata.heading_collapsed
+            cell.metadata.hidden
+            cell.metadata.code_folding
+            cell.metadata.tags
+            cell.metadata.init_cell
