--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ optional-dependencies = {dev = [
     "mkdocstrings",
     "mkdocstrings-python",
 ], test = [
+    "nbmake",
     "numpy",
     "pytest",
     "pytest-cov",
@@ -74,6 +75,11 @@ lint.ignore = [
 ]
 lint.per-file-ignores = {"__init__.py" = [
     "F401", # Unused import
+], "examples*" = [
+    "D103", # Allow missing docstrings in examples
+    "FBT001", # Allow boolean traps in examples
+    "FBT002", # Allow boolean traps in examples
+    "T201", # Allow print statements in examples
 ], "tests*" = [
     "ANN",
     "D",
